# gradient-descent-visualiser

./: README.md  TODO.md
.github/workflows/: server-docker-image.yml
client/: nuxt.config.ts  package-lock.json  package.json
client/app/: app.config.ts  app.vue
client/app/assets/css/: main.css
client/app/extra/: line.ts
client/app/pages/: d3.vue  index.vue
client/app/schemas/: gradientDescent.ts
client/app/types/: index.ts
client/app/utils/: d3.ts
server/: Dockerfile  README.md  pyproject.toml
server/src/server/: basemodels.py  fun.py  main.py  service.py  settings.py  utils.py
