[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kraigochieng", email = "kraigochieng@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numexpr>=2.13.1",
    "numpy>=2.3.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
