[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kraigochieng", email = "kraigochieng@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.119.0",
    "matplotlib>=3.10.7",
    "numexpr>=2.13.1",
    "numpy>=2.3.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
